<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


        <TextView
            android:id="@+id/tv_display"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/alarm_not_set"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"/>

        <TimePicker
            android:layout_below="@+id/tv_display"
            android:id="@+id/tp_time"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />

        <Button
            android:id="@+id/btn_set"
            android:layout_below="@+id/tp_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alarm"/>

        <Button
            android:id="@+id/btn_reset"
            android:layout_below="@+id/btn_set"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_alarm"/>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_below="@+id/btn_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/btn_weeklyalarm"
            android:layout_toRightOf="@+id/btn_cancel"
            android:layout_below="@id/btn_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weeklyalm"/>




        <LinearLayout
            android:id="@+id/layout"
            android:layout_below="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunday" />

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/monday" />

                <CheckBox
                    android:id="@+id/checkBox3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tuesday" />

                <CheckBox
                    android:id="@+id/checkBox4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wednesday"

                    />


        </LinearLayout>

        <LinearLayout
            android:layout_toEndOf="@id/layout"
            android:layout_below="@id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkBox5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/thursday" />

                <CheckBox
                    android:id="@+id/checkBox6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/friday" />

                <CheckBox
                    android:id="@+id/checkBox7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/saturday" />

                <Button
                    android:id="@+id/back2_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/back" />
        </LinearLayout>



</RelativeLayout>


