<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/alarm_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_alarm"
        android:textSize="50sp" />

    <Button
        android:id="@+id/alarm_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_alarm"
        android:textSize="50sp"/>

    <Button
        android:id="@+id/timer_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/timer"
        android:textSize="50sp"/>

    <Button
        android:id="@+id/stopwatch_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stopwatch"
        android:textSize="50sp"/>

    <Button
        android:id="@+id/weekly_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weeklyalm"
        android:textSize="50sp"/>
</LinearLayout>