<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
<TextView
android:layout_height="wrap_content"
android:layout_width="wrap_content"
android:id="@+id/tv_time"
android:textColor="#000000"
android:textStyle="bold" android:textSize="25sp"
android:layout_centerInParent="true"/>

<Button android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/btn_start" android:text="@string/Start"/>

<Button android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/btn_cancel" android:text="@string/Cancel" android:layout_below="@+id/btn_start"/>

<Button android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/btn_pause" android:text="@string/pause" android:layout_below="@+id/btn_cancel" android:enabled="false"/>

<Button android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/btn_resume" android:text="@string/resume" android:layout_below="@+id/btn_pause" android:enabled="false"/>

</RelativeLayout>